--- a/app/views/welcome/event.html.erb
+++ b/app/views/welcome/event.html.erb
@@ -11,3 +11,14 @@
     object.trigger('hello', name);
   }
 </script>
+
+<div>
+  <form>
+    <label for="name">名前</label>
+    <input id="name" type="text" />
+    <%= link_to_function 'デモ', 'hello();' %>
+  </form>
+</div>
+
+<ul id="people">
+</ul>
